Firebase services + fixed +modifications
Added:
FCM
Firebase analytics
Firebase crashlytics

fixed:
release signing

modified:
server base url moved to BuildConfig
SharedPreferences name moved to BuildConfig

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="skip">Skip</string>
 
 
+    <string name="default_notification_channel_id" translatable="false">joky_default_channel</string>
+
+
     <string name="onboarding_slide1_title">Have a Joky and Smile</string>
     <string name="onboarding_slide1_subtitle">Getting started with Joky</string>
     <string name="onboarding_slide1_desc"></string>
